cf_analysis_results/checkerframework_3.42.0_results/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8.txt
../dataset/june2020_dataset/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:67: error: (required.method.not.called) $$ 4 $$ method close $$ new RandomAccessFile(this.namedPipeLocation, "rw") $$ java.io.RandomAccessFile $$ regular method exit $$ ( 2485, 2535 ) $$ @MustCall method close may not have been invoked on new RandomAccessFile(this.namedPipeLocation, "rw") or any of its aliases.
            this.namedPipe = new RandomAccessFile(this.namedPipeLocation, "rw");
                             ^
  The type of object is: java.io.RandomAccessFile.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Version.java:58: error: (required.method.not.called) $$ 4 $$ method close $$ stream $$ java.io.InputStream $$ regular method exit $$ ( 2128, 2193 ) $$ @MustCall method close may not have been invoked on stream or any of its aliases.
        InputStream stream = Version.class.getResourceAsStream(POM_PATH);
                    ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
Note: ../dataset/june2020_dataset/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
